--- a/api/build.gradle
+++ b/api/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:2.1.6'
     implementation 'org.springframework.hateoas:spring-hateoas:1.5.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
+
+
 
     testImplementation 'org.springframework.boot:spring-boot-starter-hateoas'
     testImplementation 'org.springframework.boot:spring-boot-starter-jersey'
