--- a/api/build.gradle
+++ b/api/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:2.1.6'
     implementation 'org.springframework.hateoas:spring-hateoas:1.5.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 
 
 
