add customer source evidence association

--- a/persistent/mybatis/src/test/resources/application.yml
+++ b/persistent/mybatis/src/test/resources/application.yml
@@ -8,3 +8,5 @@ spring:
     password: sa
 mybatis:
   mapper-locations: classpath:mybatis/mapper/**/*.xml
+  configuration:
+    object-factory: reengineering.ddd.mybatis.support.InjectableObjectFactory
