--- a/persistent/mybatis/src/test/resources/application.yml
+++ b/persistent/mybatis/src/test/resources/application.yml
@@ -10,3 +10,7 @@ mybatis:
   mapper-locations: classpath:mybatis/mapper/**/*.xml
   configuration:
     object-factory: reengineering.ddd.mybatis.support.InjectableObjectFactory
+logging:
+  level:
+    root: debug
+
