add test for association

--- a/persistent/mybatis/src/test/resources/application.yml
+++ b/persistent/mybatis/src/test/resources/application.yml
@@ -12,5 +12,5 @@ mybatis:
     object-factory: reengineering.ddd.mybatis.support.InjectableObjectFactory
 logging:
   level:
-    root: debug
+    root: info
 
