--- a/buildSrc/src/main/groovy/reengineering.ddd.gradle
+++ b/buildSrc/src/main/groovy/reengineering.ddd.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group = 'reengineering.ddd'
@@ -16,7 +17,16 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
+jacoco {
+    toolVersion = "0.8.8"
+}
+
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
 }
 
