--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'accounting'
-include 'domain', 'api', 'persistent:mybatis'
+include 'domain', 'api', 'persistent:mybatis', 'main'
